# agentmux

./: Cargo.toml  LICENSE  README.md
src/: app.rs  app_navigation.rs  catalog.rs  cli.rs  domain.rs  lib.rs  main.rs  output.rs  resume.rs  tui.rs
src/provider/: codex.rs  mod.rs
src/provider/codex/: config.rs
tests/: cli.rs
