[package]
name = "agentmux"
version = "0.1.0"
edition = "2024"
description = "统一检索、诊断和恢复 AI Coding Agent 会话的跨平台 CLI/TUI 工具"
license = "MIT"
repository = "https://github.com/RL1127/agentmux"
rust-version = "1.85"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
crossterm = "0.29"
dirs = "6"
fuzzy-matcher = "0.3"
ratatui = "0.29"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml_edit = "0.22"
unicode-width = "0.2"
uuid = { version = "1", features = ["serde", "v4"] }
walkdir = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Registry",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
tempfile = "3"
